--- a/README.adoc
+++ b/README.adoc
@@ -13,10 +13,11 @@ An example can be found https://github.com/gravitee-io/gravitee-repoter-elastics
 
 
 == Testing
-By default, unit tests are run with a TestContainer version of ElasticSearch 7.17.7, but sometimes it can be useful to run them against other version of ElasticSearch.
+By default, unit tests are run with a TestContainer version of ElasticSearch 8.5.2, but sometimes it can be useful to run them against other version of ElasticSearch.
 To do so you can use the following commands:
 
 * ES 5.x: `mvn clean test -Delasticsearch.version=5.6.16`
 * ES 6.x: `mvn clean test -Delasticsearch.version=6.8.23`
-* ES 7.x: `mvn clean test -Delasticsearch.version=7.17.7` (Default)
+* ES 7.x: `mvn clean test -Delasticsearch.version=7.17.7`
+* ES 8.x: `mvn clean test -Delasticsearch.version=8.5.2` (Default)
 
